# rustineers

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  index.html  print.html  searchindex.js  toc.html
.github/workflows/: .deploy-book.yml  lint.yml  tests.yml
book/: 404.html  book.toml  toc.js
book/ridge_regression_1d/: index.html
book/src/: CARGO_TUTORIAL.md  INTRODUCTION.md  SUMMARY.md
book/src/digests/: functions.md  option_result.md
book/src/kalman_filter/: README.md  constructor.md  kf_struct.md  predict_and_update.md  putting_things_together.md
book/src/kernel_ridge_regression/: README.md  gram_matrix.md  hparams_tuning.md  kernel_trait.md  krr_fit.md  krr_model.md  krr_predict.md
book/src/poisson2d/: README.md  element_module.md  mesh_module.md  quad_rule_module.md  solver_module.md  user_interface.md
crates/kalman_filter/: Cargo.toml
crates/krr_ndarray/: Cargo.toml
crates/poisson_2d/: Cargo.toml
crates/ridge_1d_fn/: Cargo.toml
crates/ridge_1d_generic/: Cargo.toml
crates/ridge_1d_ndarray/: Cargo.toml
crates/ridge_1d_struct/: Cargo.toml
crates/ridge_regression_1d/: Cargo.toml
crates/simple_optimizers/: Cargo.toml
crates/simple_optimizers_enums/: Cargo.toml
crates/simple_optimizers_ndarray/: Cargo.toml
crates/simple_optimizers_traits/: Cargo.toml
ridge_regression_1d/: gradient_descent.html  gradient_function.html  loss_function.html  one_step_further.html  putting_things_together.html
src/: main.rs
src/ridge_regression_1d/: README.md  gradient_descent.md  gradient_function.md  loss_function.md
(+97 files in other folders)
