[package]
name = "rustineers"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/simple_optimizers",
    "crates/ridge_regression_1d",
]

[workspace.dependencies]
num-traits = "0.2"

[dependencies]
ridge_regression_1d = { path = "crates/ridge_regression_1d" }
simple_optimizers = { path = "crates/simple_optimizers" }
