[package]
name = "rustineers"
version = "0.1.0"
edition = "2024"

readme = "README.md"

[workspace]
members = [
    "crates/simple_optimizers",
    "crates/ridge_1d_fn",
    "crates/ridge_1d_struct",
    "crates/ridge_1d_generic",
    "crates/ridge_1d_ndarray",
]

[dependencies]
num-traits = "0.2"
ndarray = "0.16.1"
